[gd_scene load_steps=4 format=3 uid="uid://di2qgj4npdhxy"]

[ext_resource type="Script" uid="uid://b0hip00a2f8le" path="res://Scripts/LoginWindow.gd" id="1_mn0sk"]
[ext_resource type="PackedScene" uid="uid://ro853h8fu13i" path="res://Scene/CreateAccountWindow.tscn" id="2_ouqwy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouqwy"]
bg_color = Color(0.0605303, 0.0605304, 0.0605303, 1)

[node name="LoginWindow" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -167.5
offset_right = 242.5
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouqwy")
script = ExtResource("1_mn0sk")
CreateAccountWindow = ExtResource("2_ouqwy")

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 99.0
offset_right = 197.0
offset_bottom = 139.0
text = "Passsword"
scroll_active = false
shortcut_keys_enabled = false

[node name="Email" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 46.0
offset_right = 420.0
offset_bottom = 81.0
caret_blink = true

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 97.0
offset_right = 422.0
offset_bottom = 132.0
caret_blink = true

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 46.0
offset_right = 200.0
offset_bottom = 86.0
text = "Email"
scroll_active = false
shortcut_keys_enabled = false

[node name="Login" type="Button" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 163.0
offset_right = 201.0
offset_bottom = 213.0
theme_override_colors/icon_hover_color = Color(0.219608, 0.219608, 0.219608, 1)
text = "Login"

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 230.0
offset_right = 201.0
offset_bottom = 280.0
theme_override_colors/icon_hover_color = Color(0.219608, 0.219608, 0.219608, 1)
text = "Cancel"

[node name="CreateAccount" type="Button" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 164.0
offset_right = 421.0
offset_bottom = 214.0
theme_override_colors/icon_hover_color = Color(0.219608, 0.219608, 0.219608, 1)
text = "Create account"

[node name="ErrLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -23.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Login" to="." method="_on_login_button_down"]
[connection signal="button_down" from="Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="CreateAccount" to="." method="_on_create_account_button_down"]
